[tool.poetry]
name = "digit-classification-with-cnn"
version = "0.1.0"
description = ""
authors = ["Petteri Karttunen <petteri.karttunen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.16.1"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
pydot = "^2.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
